# AuditorNazorat

./: .README.md.swp  README.md  app.py  main.py  metadata.json  mock_data.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tricks_db.py
src/: App.tsx  index.css
src/services/: geminiService.ts
static/: index.html
